k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globalvault-mysql-deployment
  labels:
    app: globalvault-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globalvault-mysql
  template:
    metadata:
      labels:
        app: globalvault-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: globalvault-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: globalvault-app-db-service
  labels:
    app: globalvault-mysql
spec:
  selector:
    app: globalvault-mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
